# dbt-core-demo-cafe

./: .gitignore  LICENSE  Makefile  Makefile.toml  README.md  app.py  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml  requirements.txt
.github/: workflows
models/marts/: dim_customers.sql  dim_customers.yml  dim_products.sql  dim_products.yml  dim_stores.sql  dim_stores.yml  fct_order_items.sql  fct_order_items.yml  fct_orders.sql  fct_orders.yml
models/staging/: sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_stores.sql
seeds/: 商品マスタ.csv  店舗マスタ.csv  注文.csv  注文明細.csv
