[project]
name = "dbt-core-demo-cafe"
version = "0.1.0"
description = "dbt project for analyzing cafe operation data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-duckdb>=1.8.0",
    "streamlit>=1.32.0",
    "duckdb>=0.10.0",
    "polars>=0.20.0",
    "pyarrow>=22.0.0",
]
